--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 
     <nav class="navbar navbar-expand-lg">
       <div class="container custom-navbar">
-        <a class="navbar-brand" href="#">
-          <img src="img/logo.png" alt="Bootstrap" width="187" height="32">
+          <img src="img/logo.png" alt="Bootstrap" width="187" height="32" href="index.html">
         <button
           class="navbar-toggler"
           type="button"
@@ -35,15 +34,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#">Product</a>
+              <a class="nav-link" href="#product">Product</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Customers</a>
+              <a class="nav-link" href="#customers">Customers</a>
             </li><li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Resources</a>
+              <a class="nav-link" href="#resources">Resources</a>
             </li>
           </ul>
           <ul class="navbar-nav mb-2 mb-lg-0">
@@ -72,7 +71,7 @@
               your next user experience.
             </p>
             <div class="a btn btn-primary-1 mr-30">Get Started</div>
-            <div class="badge">
+            <div class="badge mt-30 mb-45">
               <img class="icon" src="img/Triangle Copy 6.svg" alt="" />
               <a href="" class="small-copy">Watch The Video</a>
             </div>
@@ -84,7 +83,7 @@
       </div>
     </section>
 
-    <section class="features mt-120">
+    <section class="features mt-120" id="product">
       <div class="container">
         <div class="row text-center">
           <div class="col-lg-12">
@@ -131,13 +130,13 @@
             </p>
           </div>
           <div class="text-center">
-            <div class="a btn btn-primary-1 mr-30">Sign Up Now</div>
+            <div class="a btn btn-primary-1">Sign Up Now</div>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="content-1 mt-120">
+    <section class="content-1 mt-120" id="customers">
       <div class="container">
         <div class="row">
           <div class="col-lg-6 align-self-center">
@@ -166,7 +165,7 @@
               <h5 class="small-header-2 mb-12">
                 Custom Design designers
               </h5>
-              <p class="primary-copy-1">
+              <p class="primary-copy-1 mb-45">
                 If you are looking for a new way to promote your business that won’t cost you more money, 
               </p>
             </div>
@@ -178,10 +177,10 @@
       </div>
     </section>
 
-    <section class="content-2 mt-120">
+    <section class="content-2 mt-120" id="pricing">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-6 mb-45">
             <img src="img/Image1.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 align-self-center">
@@ -204,19 +203,13 @@
               <div class="badge-1 mb-30">
                 <img class="icon-1 mr-30" src="img/Group 13.png" alt="" />
                 <p class="primary-copy-1">
-                  Never worry about overpaying for your <br> energy again. 
+                  We will only switch you to energy companies <br> that we trust and will treat you right 
                 </p>
               </div>
               <div class="badge-1 mb-30">
                 <img class="icon-1 mr-30" src="img/Group 13.png" alt="" />
                 <p class="primary-copy-1">
-                  Never worry about overpaying for your <br> energy again. 
-                </p>
-              </div>
-              <div class="badge-1">
-                <img class="icon-1 mr-30" src="img/Group 13.png" alt="" />
-                <p class="primary-copy-1">
-                  Never worry about overpaying for your <br> energy again. 
+                  We track the markets daily and know where <br> the savings are. 
                 </p>
               </div>
             </div>
@@ -254,7 +247,7 @@
               <h5 class="small-header-2 mb-12">
                 Custom Design designers
               </h5>
-              <p class="primary-copy-1 mb-30">
+              <p class="primary-copy-1 mb-45">
                 If you are looking for a new way to promote your business that won’t cost you more money, 
               </p>
             </div>
@@ -266,7 +259,7 @@
       </div>
     </section>
 
-    <section class="slider mt-120">
+    <section class="slider mt-120" id="resources">
       <div class="container">
         <div class="row">
           <h3 class="medium-header mb-12">
