update responsive mobile

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </li>
           </ul>
           <ul class="navbar-nav mb-2 mb-lg-0">
-            <li class="nav-item mr-15">
+            <li class="nav-item">
               <a class="btn btn-secondary" href="#">Sign In</a>
             </li>
             <li class="nav-item">
@@ -195,22 +195,40 @@
                 The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. 
               </div>
               <div class="badge-1 mb-30">
-                <img class="icon-1 mr-30" src="img/Group 13.png" alt="" />
-                <p class="primary-copy-1">
-                  Never worry about overpaying for your <br> energy again. 
-                </p>
+                <div class="row">
+                  <div class="col-lg-1 mr-15 align-self-center">
+                    <img class="icon-1" src="img/Group 13.png" alt="" />
+                  </div>
+                  <div class="col-lg-9">
+                    <p class="primary-copy-1 p1">
+                      Never worry about overpaying for your <br> energy again. 
+                    </p>
+                  </div>
+                </div>
               </div>
               <div class="badge-1 mb-30">
-                <img class="icon-1 mr-30" src="img/Group 13.png" alt="" />
-                <p class="primary-copy-1">
-                  We will only switch you to energy companies <br> that we trust and will treat you right 
-                </p>
+                <div class="row">
+                  <div class="col-lg-1 mr-15 align-self-center">
+                    <img class="icon-1" src="img/Group 13.png" alt="" />
+                  </div>
+                  <div class="col-lg-9">
+                    <p class="primary-copy-1 p1">
+                      We will only switch you to energy companies <br> that we trust and will treat you right 
+                    </p>
+                  </div>
+                </div>
               </div>
               <div class="badge-1 mb-30">
-                <img class="icon-1 mr-30" src="img/Group 13.png" alt="" />
-                <p class="primary-copy-1">
-                  We track the markets daily and know where <br> the savings are. 
-                </p>
+                <div class="row">
+                  <div class="col-lg-1 mr-15 align-self-center">
+                    <img class="icon-1" src="img/Group 13.png" alt="" />
+                  </div>
+                  <div class="col-lg-9">
+                    <p class="primary-copy-1 p1">
+                      We track the markets daily and know where <br> the savings are. 
+                    </p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
